<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">
    
    <fragment
        android:id="@+id/sceneform_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </fragment>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/label_group"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="620dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Labels -->
        <TextView
            android:id="@+id/label_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_info"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_group"/>

        <TextView
            android:id="@+id/label_azimuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_azimuth_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_notification"/>

        <TextView
            android:id="@+id/label_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_pitch_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_azimuth"/>

        <TextView
            android:id="@+id/label_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_roll_string"
            style="@style/Label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_pitch"/>

        <!-- Values -->
        <TextView
            android:id="@+id/value_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toRightOf="@id/label_notification"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/label_notification"/>

        <TextView
            android:id="@+id/value_azimuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toRightOf="@id/label_azimuth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_notification"/>

        <TextView
            android:id="@+id/value_pitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_azimuth"/>

        <TextView
            android:id="@+id/value_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_format"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_pitch"/>
    </android.support.constraint.ConstraintLayout>


</RelativeLayout>